--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#d19894</color>
+    <color name="colorPrimary">#000000</color>
     <color name="colorPrimaryDark">#995252</color>
     <color name="colorAccent">#72adc4</color>
 </resources>
