--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -58,7 +58,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/seven_button"
                 android:textColor="@android:color/background_dark"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <Button
                 android:id="@+id/eightBtn"
@@ -68,7 +68,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/eight_button"
                 android:textColor="@android:color/black"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <Button
                 android:id="@+id/nineBtn"
@@ -78,7 +78,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/nine_button"
                 android:textColor="@android:color/black"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <ImageButton
                 android:id="@+id/divideBtn"
@@ -86,6 +86,8 @@
                 android:layout_height="110dp"
                 android:layout_weight="1"
                 android:background="#00000000"
+                android:src="@drawable/divide"
+                android:visibility="visible"
                 app:srcCompat="@drawable/divide" />
 
         </LinearLayout>
@@ -103,7 +105,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/four_button"
                 android:textColor="@android:color/background_dark"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <Button
                 android:id="@+id/eightBtn"
@@ -113,7 +115,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/five_button"
                 android:textColor="@android:color/black"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <Button
                 android:id="@+id/nineBtn"
@@ -123,7 +125,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/six_button"
                 android:textColor="@android:color/black"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <ImageButton
                 android:id="@+id/divideBtn"
@@ -131,6 +133,7 @@
                 android:layout_height="110dp"
                 android:layout_weight="1"
                 android:background="#00000000"
+                android:src="@drawable/multiply"
                 app:srcCompat="@drawable/multiply" />
 
         </LinearLayout>
@@ -148,7 +151,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/one_button"
                 android:textColor="@android:color/background_dark"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <Button
                 android:id="@+id/eightBtn"
@@ -158,7 +161,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/two_button"
                 android:textColor="@android:color/black"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <Button
                 android:id="@+id/nineBtn"
@@ -168,7 +171,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/three_button"
                 android:textColor="@android:color/black"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <ImageButton
                 android:id="@+id/divideBtn"
@@ -176,6 +179,7 @@
                 android:layout_height="110dp"
                 android:layout_weight="1"
                 android:background="#00000000"
+                android:src="@drawable/subtract"
                 app:srcCompat="@drawable/subtract" />
 
         </LinearLayout>
@@ -185,25 +189,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/sevenBtn"
-                android:layout_width="match_parent"
-                android:layout_height="110dp"
-                android:layout_weight="1"
-                android:background="@android:color/background_light"
-                android:text="@string/seven_button"
-                android:textColor="@android:color/background_dark"
-                android:textSize="22sp" />
+            <LinearLayout
+                android:layout_width="205dp"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/eightBtn"
-                android:layout_width="match_parent"
-                android:layout_height="110dp"
-                android:layout_weight="1"
-                android:background="@android:color/background_light"
-                android:text="@string/eight_button"
-                android:textColor="@android:color/black"
-                android:textSize="22sp" />
+                <Button
+                    android:id="@+id/button14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_weight="1"
+                    android:text="@string/clear_button"
+                    android:textSize="24sp" />
+            </LinearLayout>
 
             <Button
                 android:id="@+id/nineBtn"
@@ -213,7 +212,7 @@
                 android:background="@android:color/background_light"
                 android:text="@string/zero_button"
                 android:textColor="@android:color/black"
-                android:textSize="22sp" />
+                android:textSize="28sp" />
 
             <ImageButton
                 android:id="@+id/divideBtn"
@@ -221,6 +220,7 @@
                 android:layout_height="110dp"
                 android:layout_weight="1"
                 android:background="#00000000"
+                android:src="@drawable/add"
                 app:srcCompat="@drawable/add" />
 
         </LinearLayout>
