--- a/app/src/main/res/layout/activity_calc.xml
+++ b/app/src/main/res/layout/activity_calc.xml
@@ -11,10 +11,6 @@
     <LinearLayout
         android:layout_width="410dp"
         android:layout_height="605dp"
-        android:layout_marginBottom="0dp"
-        android:layout_marginLeft="0dp"
-        android:layout_marginRight="0dp"
-        android:layout_marginTop="0dp"
         android:background="@android:color/white"
         android:orientation="vertical"
         android:weightSum="1"
@@ -34,14 +30,14 @@
             <EditText
                 android:id="@+id/editText"
                 android:layout_width="match_parent"
-                android:layout_height="150dp"
+                android:layout_height="100dp"
                 android:layout_weight="0.09"
                 android:gravity="bottom|right"
                 android:inputType="textPersonName"
                 android:paddingLeft="15dp"
-                android:paddingRight="15dp"
+                android:paddingRight="20dp"
                 android:text="0"
-                android:textSize="30sp" />
+                android:textSize="40sp" />
 
         </LinearLayout>
 
@@ -226,6 +222,20 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/imageButton4"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="0.09"
+        android:background="@android:color/transparent"
+        android:paddingLeft="350dp"
+        android:paddingRight="20dp"
+        android:paddingTop="110dp"
+        android:src="@drawable/equal"
+        app:srcCompat="@drawable/equal"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="-2dp" />
 
 </android.support.constraint.ConstraintLayout>
 
